@@ -72,7 +72,7 @@
 {
     NSString* expected = @"expected";
     NSString* actual = @"actual";
-    NSString* expectedMessage = @"Expected \"expected\", got \"actual\"";
+    NSString* expectedMessage = @"Expected \"expected\", but was \"actual\"";
     
     @try
     {
